<resources>
    <string name="app_name">AndFChat</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="actions">Actions</string>
    <string name="ad_clickable_advertisement">[Tap to view the ad]</string>
    <string name="arrows_left">&lt;&lt;</string>
    <string name="arrows_right">&gt;&gt;</string>
    <string name="bookmark_user">+Bookmark</string>
    <string name="bookmarks_selector">Bookmarks</string>
    <string name="channel_description">Description</string>
    <string name="channels">Channels</string>
    <string name="chatmessage_hint">Write a message</string>
    <string name="close">Close</string>
    <string name="connecting">Connecting…</string>
    <string name="dismiss">Dismiss</string>
    <string name="exit">Quit</string>
    <string name="export_text">Export</string>
    <string name="friends_selector">Friends</string>
    <string name="friendlist">Friends &amp; Bookmarks</string>
    <string name="hide">Hide</string>
    <string name="leave_channel">Leave</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="no">No</string>
    <string name="password">Password</string>
    <string name="pm_user">Open PM</string>
    <string name="post_ad_text">Post Ad</string>
    <string name="private_channels">Private Channels</string>
    <string name="public_channels">Public Channels</string>
    <string name="remember_account">Remember Account</string>
	<string name="remember_password">Remember Password</string>
	<string name="show_advanced">Show advanced settings</string>
	<string name="host">Host</string>
    <string name="select_character">Select Character</string>
    <string name="send_message">Send</string>
    <string name="settings">Settings</string>
    <string name="show">Show</string>
    <string name="show_ads">Show Ads</string>
    <string name="show_avatar">Show Avatar</string>
    <string name="show_details">Open Details</string>
    <string name="show_profile">Profile</string>
    <string name="status">Status:</string>
    <string name="unbookmark_user">-Bookmark</string>
    <string name="yes">Yes</string>
    <plurals name="notification_attention">
        <item quantity="one">You have %d new message</item>
        <item quantity="other">You have %d new messages</item>
    </plurals>
    <string name="notification_connected">Connected to F-chat</string>
    <string name="notification_disconnect">Disconnected from F-Chat</string>
    <string name="message_channel_joined">joined the channel</string>
    <string name="message_channel_left">left the channel</string>
    <string name="message_connected">logged on</string>
    <string name="message_disconnected">logged off</string>
    <string name="message_invite_to_channel">has invited you to join [session=%1$s]%2$s[/session]</string>
    <string name="message_status_changed">is now %1$s</string>
    <string name="message_status_changed_with_message">is now %1$s [%2$s]</string>
    <string name="question_back">Do you really want to quit?</string>
    <string name="question_delete_log">Do you really want to delete this log?</string>
    <string name="question_disconnect">Do you really want to log off?</string>
    <string name="back_quit_toast">Press again to exit</string>
    <string name="command_help_menu">Help menu shows all usable commands</string>
    <string name="copied_room_code">Room code copied to clipboard.</string>
    <string name="error_command_not_allowed">This command isn\'t allowed here</string>
    <string name="error_disconnected">Disconnected: %1$s</string>
    <string name="error_disconnected_no_connection">Lost connection to server</string>
    <string name="error_login">Login failed: </string>
    <string name="error_name_not_found">No user with name \'%1$s\' found</string>
    <string name="error_no_name_given">Please give a username as a parameter</string>
    <string name="export_failed">Can\'t write output, download directory doesn\'t exist</string>
    <string name="export_perm_denied">Log exporting will not work without storage permissions</string>
    <string name="export_perm_granted">You can now export logs</string>
    <string name="exported">Successfully exported to the download directory, filename: %1$s</string>
    <string name="fast_message">Way past fast! Slow down!</string>
    <string name="text_about">AndFChat is developed under the GPLv3 licence.
        \n\nAndFChat %1$s is a [color=red]third-party[/color] client for F-list, and is still a [color=red]beta[/color], so please be patient with it!
        \n\nFound bugs can be sent via note to AndFChat (yes, some tags are still not parsed) or directly as issues via GitHub [url]https://github.com/AndFChat/AndFChat/[/url]\n
        \n
        [b][color=red]Still looking for help![/color][/b]\n
        * Experienced Android developer for UI design, especially scaling questions for different display layouts.\n</string>
    <string name="crash_toast_text">Sorry! Please send a crash report via F-list note to BOTH AndFChat UI and AndFChat, or via email to githublimon@gmail.com</string>
    <string name="title_debug">Debug</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_general">General</string>
    <string name="title_theme">App style</string>
    <string name="description_theme">Choose an app theme (Requires restart)</string>
    <string name="title_initial_channel">Channels on login</string>
    <string name="description_initial_channel">Choose which channels open upon login</string>
    <string name="title_initial_private_channel">Private channels on login</string>
    <string name="description_initial_private_channel">Choose which private channels open upon login</string>
    <string name="title_show_avatar_pictures">Show avatars</string>
    <string name="description_show_avatar_pictures">Shows F-list avatar pictures for private chats</string>
    <string name="title_separate_friends">Separate Friends and Bookmarks</string>
    <string name="description_separate_friends">Separate friends and bookmarks in the friend list?</string>
    <string name="title_log_history">Save chat history</string>
    <string name="description_log_history">Save chat logs to internal storage</string>
    <string name="title_log_channel">Log public channels</string>
    <string name="description_log_channel">Log public channels as well as PMs</string>
    <string name="title_delete_history">Delete your history</string>
    <string name="description_delete_history">Remove all logs from internal storage</string>
    <string name="title_show_notifications">Show notifications</string>
    <string name="description_show_notifications">Show notifications in the status bar</string>
    <string name="title_audio_feedback">Tone on new messages</string>
    <string name="description_audio_feedback">New messages trigger notification audio</string>
    <string name="title_vibration_feedback">Vibrate on new messages</string>
    <string name="description_vibration_feedback">New messages trigger vibration</string>
    <string name="title_show_user_status_changes">Show user status changes</string>
    <string name="description_show_user_status_changes">Show status notifications for friends/bookmarks</string>
    <string name="title_show_channel_info">Show channel info</string>
    <string name="description_show_channel_info">Show channel join/leave notifications</string>
    <string name="title_use_debug_channel">Show debug information</string>
    <string name="description_use_debug_channel">Shows the input/output tags in the console</string>
    <string name="command_description_ad">[text] | Posts an ad to the channel.</string>
    <string name="command_description_ban">[user] | Removes the character from the current room and prevents them from re-entering. You can\'t ban a character who is not currently online and in the room.</string>
    <string name="command_description_bottle">| Selects one person in the room, purportedly by spinning a bottle. If Bob were to type /bottle, he might see: Bob spins the bottle: Hexxy</string>
    <string name="command_description_cdeop">[user] | Removes a moderator/chan-op from the current private room. [character] is the character to demote.</string>
    <string name="command_description_close">| Leaves the current channel.</string>
    <string name="command_description_closeroom">| This will close the current opened private room, removing it from the list and making further entry invite-only.</string>
    <string name="command_description_code">| Copies the code of the current private room into the clipboard.</string>
    <string name="command_description_cop">[user] | Adds a moderator/chan-op to the current private room. [user] is the character to be promoted.</string>
    <string name="command_description_ignore">[user] | This will prevent any further communication on F-Chat between your account (all your characters) and that character.</string>
    <string name="command_description_invite">[user] | Invites another character to the current room, giving them permission to enter. Your current character must be a Chan-Op or Room Owner.</string>
    <string name="command_description_join">[name] | Joins public or private room named [name]. For private channels, use the room code instead of the name.</string>
    <string name="command_description_kick">[user] | Removes the character from the current private room. If it is an open private room, it does not prevent them from re-entering.</string>
    <string name="command_description_makeroom">[name] | Open a new private room named [name].</string>
    <string name="command_description_openroom">| This will make the current private room open, adding it to the list of private rooms, and allowing anyone to join.</string>
    <string name="command_description_priv">[user] | This opens a private message session with another character.</string>
    <string name="command_description_roll">[#d##] | This command rolls a number of dice. If Bob wanted to roll two dice with six sides each, he\'d type: /roll 2d6</string>
    <string name="command_description_setdescription">[text] | This sets the current room\'s description to the given text.</string>
    <string name="command_description_setmode">[mode] | This determines the type of content that can be sent in the current private room. [mode] can be \'ads\', \'chat\', or \'both\' (Default: both)</string>
    <string name="command_description_setowner">[user] | This sets the owner of the current room to the designated character.</string>
    <string name="command_description_status">[optional text] | Statuses are: online, looking, away, busy, dnd</string>
    <string name="command_description_unban">[user] | Permit a previously banned character to enter the current room again.</string>
    <string name="command_description_unignore">[user] | Reverses the /ignore command, to allow communication once again.</string>
    <string name="command_description_uptime">| Reports how long the server has been running.</string>
    <string name="command_description_timeout">[user] | Temporarily bans a character from the room for 30 minutes.</string>
    <string name="handler_message_demoted">has been demoted in %1$s</string>
    <string name="handler_message_ignored">has been ignored</string>
    <string name="handler_message_new_owner">has been made the owner of %1$s</string>
    <string name="handler_message_promoted">has been promoted in %1$s</string>
    <string name="handler_message_room_mode">Channel now showing %1$s</string>
    <string name="handler_message_timeout_mod">has been banned from %1$s for %2$s minutes by %3$s</string>
    <string name="handler_message_timeout_you">has banned you from %1$s for %2$s minutes</string>
    <string name="handler_message_unignored">has been unignored</string>
</resources>