<?xml version="1.0" encoding="utf-8"?>
<!--
      This file is part of AndFChat.
  
      AndFChat is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      AndFChat is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with AndFChat.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory 
        android:title="@string/title_general"
        android:key="general">
      
        <ListPreference 
            android:key="theme"
            android:title="@string/title_theme"
            android:summary="@string/description_theme"
            android:entries="@array/themes_translation"
            android:entryValues="@array/Themes"    
            android:defaultValue="AppTheme"
        />

        <CheckBoxPreference
            android:key="show_notifications"
            android:summary="@string/description_show_notifications"
            android:title="@string/title_show_notifications"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="true"
            />
        
        <ListPreference 
            android:key="chat_text_size"
            android:title="@string/title_chat_text_size"
            android:summary="@string/description_chat_text_size"
            android:entries="@array/text_size_translation"
            android:entryValues="@array/TextSize"
            android:defaultValue="medium"
        />

        <CheckBoxPreference
            android:key="show_avatar_pictures"
            android:summary="@string/description_show_avatar_pictures"
            android:title="@string/title_show_avatar_pictures"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="true"
        />

        <ListPreference
            android:key="initial_channel"
            android:summary="@string/description_initial_channel"
            android:title="@string/title_initial_channel"
            android:defaultValue="Frontpage"
        />
        
        <CheckBoxPreference
            android:key="log_history"
            android:summary="@string/description_log_history"
            android:title="@string/title_log_history"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="true"
        />
        
        <CheckBoxPreference
            android:key="log_channel"
            android:summary="@string/description_log_channel"
            android:title="@string/title_log_channel"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="true"
        />
        
        <Preference
            android:key="button"
            android:title="@string/title_delete_history"
            android:summary="@string/description_delete_history"
        />
    </PreferenceCategory>
        
    <PreferenceCategory 
        android:title="@string/title_feedback"
        android:key="feedback">
    
        <CheckBoxPreference
            android:key="show_channel_info"
            android:summary="@string/description_show_channel_info"
            android:title="@string/title_show_channel_info"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="false"
        />
        
        <CheckBoxPreference
            android:key="show_user_status_changes"
            android:summary="@string/description_show_user_status_changes"
            android:title="@string/title_show_user_status_changes"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="true"
        />
        
        <CheckBoxPreference
            android:key="vibration_feedback"
            android:summary="@string/description_vibration_feedback"
            android:title="@string/title_vibration_feedback"
            android:widgetLayout="@layout/preference_switch"
            android:hapticFeedbackEnabled="true"
            android:defaultValue="true"
        />
        
        <CheckBoxPreference
            android:key="led_feedback"
            android:summary="@string/description_led_feedback"
            android:title="@string/title_led_feedback"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="true"
        />                
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/title_debug"
        android:key="debug">
    
        <CheckBoxPreference
            android:key="use_debug_channel"
            android:summary="@string/description_use_debug_channel"
            android:title="@string/title_use_debug_channel"
            android:widgetLayout="@layout/preference_switch"
            android:defaultValue="false"
        />
        
    </PreferenceCategory>
</PreferenceScreen>
