<!--
      This file is part of AndFChat.
  
      AndFChat is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      AndFChat is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with AndFChat.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/popup_background"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingBottom="2dp">      
    
    <LinearLayout     
        android:orientation="horizontal"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    
	    <TextView 
	        android:id="@+id/friendListTitle"
	        android:text="@string/friendlist"
	        android:textSize="@dimen/text_size_popup_header"
	        android:textStyle="bold"
            android:textColor="@color/white"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
	        />
    
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/popup_background">

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="0px"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:text="@string/friends_selector"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/bookmarksButton"
            android:layout_width="0px"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:text="@string/bookmarks_selector"
            style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

    <LinearLayout     
        android:orientation="vertical"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
     	android:background="@color/popup_background">

        <ListView 	            
            android:id="@+id/channelsToJoin"
	        android:layout_height="match_parent"
	        android:layout_width="match_parent"
            android:divider="@color/gray"
            android:dividerHeight="0px">
        </ListView>
        
    </LinearLayout>    
    
</LinearLayout>

