<!--
      This file is part of AndFChat.
  
      AndFChat is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      AndFChat is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with AndFChat.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"    
   	android:gravity="center_horizontal"     
    android:background="?attr/BackgroundColor"
    tools:context=".Login" >

    <TextView
        android:id="@+id/loginErrorField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/red"
        android:layout_marginTop="25dp"/>
    
    <LinearLayout
	    android:layout_width="250dp"
    	android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">                
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAppearance="@android:style/TextAppearance.Small"
        />
            
        <EditText
            android:id="@+id/accountField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:inputType="textVisiblePassword">
            
            <requestFocus />
            
        </EditText>       
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@android:style/TextAppearance.Small"
        />    
        
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
        />

        <CheckBox 
            android:id="@+id/rememberAccount"
            android:text="@string/remember_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />
        </LinearLayout>
</LinearLayout>
